--- a/homework/pizza_app/package.json
+++ b/homework/pizza_app/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "start": "watchify src/index.js -o dist/bundle.js -dv",
+    "start": "watchify  src/index.js   -t babelify -o dist/bundle.js -dv",
     "server": "static -p 3000"
   },
   "devDependencies": {
+    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "node-static": "^0.7.8",
     "watchify": "^3.7.0"
